<resources>
    <string name="app_name">Android-JavaConnection</string>
    <string name="action_settings">Settings</string>

    <string name="ipAddrTextArea">192.168.1.26</string>
    <string name="ipAddrLabel">IP Address:</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="sendButton">Send</string>
    <string name="sendTextArea"/>
    <string name="sendLabel">To send:</string>
</resources>
