<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ipAddrLabel"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/ipAddrLabel"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ipAddrTextArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:text="@string/ipAddrTextArea" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickConnect"
        android:text="@string/connectButton" />

    <TextView
        android:id="@+id/toSendLabel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:text="@string/sendLabel"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/toSendTextArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/sendTextArea" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSend"
        android:text="@string/sendButton" />

</LinearLayout>